--- a/btia_web/app/globals.css
+++ b/btia_web/app/globals.css
@@ -2,32 +2,138 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "Pretendard";
+    src: url(../public/fonts/Pretendard-Black.otf);
+    font-weight: 900;
+}
+@font-face {
+    font-family: "Pretendard";
+    src: url(../public/fonts/Pretendard-Bold.otf);
+    font-weight: 700;
+}
+@font-face {
+    font-family: "Pretendard";
+    src: url(../public/fonts/Pretendard-Regular.otf);
+    font-weight: 400;
+}
+
+* {
+    letter-spacing: -0.05em;
+    line-height: 1.1;
+}
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --black: #131313;
+    --white: #f3f3f3;
+    --primary: #ff6b00;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.nav-item {
+    position: relative;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.nav-item::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 0;
+    left: 50%;
+    bottom: -2px;
+    background-color: var(--primary);
+    transition: 0.4s all;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.nav-item:hover::after,
+.nav-item.active::after {
+    left: 0;
+    width: 100%;
+}
+
+.image-shadow {
+    background: linear-gradient(to left, #15000080, #24000040, #00000040);
+    width: 100%;
+    height: 30px;
+    border-radius: 100%;
+    filter: blur(25px);
+    transform: translateY(80px);
+    /* animation-delay: 1s; */
+    animation: shadowHover 2s alternate infinite ease-in-out;
+}
+
+.landing-image {
+    animation: hoverAni 2s infinite alternate ease-in-out;
+}
+
+.landing-button {
+    transition: all 0.5s;
+    transition-delay: 1s;
+}
+.landing-button.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.landing-ment {
+    transition: all 0.5s;
+    transition-delay: 0.5s;
+}
+.landing-ment.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+@keyframes hoverAni {
+    100% {
+        transform: translate(40px, -10px) rotate(12deg);
+    }
+}
+
+@keyframes shadowHover {
+    100% {
+        filter: blur(30px);
+    }
+}
+
+@keyframes landingEffect {
+    0% {
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+input {
+    border: 1px solid var(--primary);
+    border-radius: 10px;
+    height: 70px;
+    flex: 1;
+    outline: none;
+    max-width: 223px;
+    font-size: 32px;
+    text-align: center;
+    letter-spacing: 0.3em;
+}
+
+.fill-btn {
+    position: relative;
+    overflow: hidden;
+}
+
+.fill-btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #131313;
+    opacity: 0;
+    transition: all 0.3s;
+}
+.fill-btn:hover::after {
+    opacity: 0.1;
 }
