--- a/btia_web/app/globals.css
+++ b/btia_web/app/globals.css
@@ -21,6 +21,7 @@
 * {
     letter-spacing: -0.05em;
     line-height: 1.1;
+    user-select: none;
 }
 
 :root {
@@ -39,7 +40,7 @@
     height: 4px;
     width: 0;
     left: 50%;
-    bottom: -2px;
+    bottom: -6px;
     background-color: var(--primary);
     transition: 0.4s all;
 }
@@ -57,7 +58,6 @@
     border-radius: 100%;
     filter: blur(25px);
     transform: translateY(80px);
-    /* animation-delay: 1s; */
     animation: shadowHover 2s alternate infinite ease-in-out;
 }
 
@@ -136,4 +136,19 @@ input {
 }
 .fill-btn:hover::after {
     opacity: 0.1;
+}
+
+.modal-back.active {
+    visibility: visible;
+    background-color: #00000040;
+}
+
+.modal {
+    transition: all 0.3s;
+}
+
+.modal-back.active .modal {
+    transition-delay: 0.3s;
+    opacity: 1;
+    transform: translateY(0);
 }
