--- a/btia_web/app/globals.css
+++ b/btia_web/app/globals.css
@@ -118,9 +118,24 @@ input {
     letter-spacing: 0.3em;
 }
 
-.fill-btn {
+.fill-btn,
+.ghost-btn {
+    cursor: pointer;
     position: relative;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fill-btn {
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+.ghost-btn {
+    border: 2px solid var(--primary);
+    color: var(--primary);
 }
 
 .fill-btn::after {
@@ -134,8 +149,14 @@ input {
     opacity: 0;
     transition: all 0.3s;
 }
-.fill-btn:hover::after {
-    opacity: 0.1;
+
+.fill-btn.working {
+    cursor: default;
+    opacity: 0.6;
+}
+
+.fill-btn:active::after {
+    opacity: 0.2;
 }
 
 .modal-back.active {
@@ -164,4 +185,16 @@ input {
     100% {
         opacity: 1;
     }
+}
+
+.check-circle {
+    background-color: var(--white);
+}
+
+.check-circle.checked {
+    background-color: var(--primary);
+    background-image: url(/image/check.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 36px 36px;
 }
