--- a/btia_web/app/globals.css
+++ b/btia_web/app/globals.css
@@ -56,17 +56,47 @@
     width: 100%;
     height: 30px;
     border-radius: 100%;
-    filter: blur(25px);
+    filter: blur(20px);
     transform: translateY(80px);
     animation: shadowHover 2s alternate infinite ease-in-out;
+}
+
+@media (max-width: 1280px) {
+    .image-shadow {
+        transform: translateY(6vw);
+    }
 }
 
 .landing-image {
     animation: hoverAni 2s infinite alternate ease-in-out;
 }
 
+@keyframes hoverAni {
+    100% {
+        transform: translate(40px, -10px) rotate(12deg);
+    }
+}
+
+@media (max-width: 640px) {
+    @keyframes hoverAni {
+        100% {
+            transform: translate(0px, -10px) rotate(12deg);
+        }
+    }
+
+    .image-shadow {
+        margin: 0 auto;
+        width: 50%;
+    }
+
+    input {
+        width: 90px;
+        font-size: 24px;
+    }
+}
+
 .landing-button {
-    transition: all 0.5s;
+    transition: opacity 0.5s, transform 0.5s;
     transition-delay: 1s;
 }
 .landing-button.active {
@@ -75,18 +105,12 @@
 }
 
 .landing-ment {
-    transition: all 0.5s;
+    transition: opacity 0.5s, transform 0.5s;
     transition-delay: 0.5s;
 }
 .landing-ment.active {
     opacity: 1;
     transform: translateY(0);
-}
-
-@keyframes hoverAni {
-    100% {
-        transform: translate(40px, -10px) rotate(12deg);
-    }
 }
 
 @keyframes shadowHover {
@@ -197,6 +221,12 @@ input {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 36px 36px;
+}
+
+@media (max-width: 1020px) {
+    .check-circle.checked {
+        background-size: 24px 24px;
+    }
 }
 
 .qm {
