--- a/btia_web/app/globals.css
+++ b/btia_web/app/globals.css
@@ -202,8 +202,52 @@ input {
     animation: skeleton 1s infinite alternate ease-in-out;
 }
 
+.info-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+    opacity: 0;
+}
+
+.info-modal.active {
+    visibility: visible;
+    opacity: 1;
+    display: flex;
+}
+
+.info-modal-content {
+    padding: 32px 28px;
+    background-color: white;
+    border-radius: 16px;
+    width: 30vw;
+}
+
+.paragraph {
+    display: flex;
+    gap: 4px;
+    font-size: 20px;
+    margin-bottom: 2px;
+}
+.paragraph span {
+    margin-left: 2px;
+    width: 20px;
+}
+
+.paragraph p {
+    line-height: 1.3em;
+    width: fit-content;
+}
+
 @keyframes skeleton {
-    0% {
+    g 0% {
         opacity: 0.2;
     }
     100% {
